--- a/feedbackflow-dashboard/package.json
+++ b/feedbackflow-dashboard/package.json
@@ -34,8 +34,7 @@
     "react-hook-form": "^7.53.0",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
